# kifuwarabe2020-wcsodr1

./: .gitignore  Cargo.toml  README.md  copy-to-git.py  open-git.py
kifu/: 20200424_234633 むずでょ vs KifuwarabeW30 bld258.kif  20200425_033755 むずでょ vs KifuwarabeW30 bld261.kif  20200425_201602 むずでょ vs KifuwarabeW30 bld272.kif  20200425_221827 むずでょ vs KifuwarabeW30 bld277.kif  20200426_221520 むずでょ vs KifuwarabeW30 bld336.kif  20200428_012317 むずでょ vs KifuwarabeW30 bld364.kif  20200429_011321 KifuwarabeW30 bld377 vs Lesserkai 1.4.2.kif  20200505_191305 kifuwarabe vs usapyon2(katsudon).kif  20200604_215015 kifuwarabe vs suisho.kif  20200605_202529 arutematanupon vs kifuwarabe.kif  20200606_200234 kifuwarabe vs katsudon.kif  20200606_204158 kifuwarabe vs sayurin.kif  20200606_212343 kifu vs sug.kif  20200606_220925 kifu vs suisho.kif  20200606_224751 hefe vs kifu.kif  20200606_231945 usa vs kifu.kif  20200606_234312 kifu vs suisho.kif  20200607_001510 suisho vs kifu.kif  20200607_003911 suisho vs kifu.kif
src/: command_line_seek.rs  config.rs  log.rs  main.rs  performance_measurement.rs  position.rs
tool/: double_faced_piece_to_nonpromoted_piece.py  library.py  match_double_faced_piece.py  piece_from_phase_and_piece_type.py  piece_to_captured_piece.py  piece_to_demoted_piece.py  piece_to_double_faced_piece.py  piece_to_double_faced_piece_type.py  piece_to_phase.py  piece_to_piece_type.py  piece_to_promoted_piece.py  square_type_to_absolute_address_2d.py  square_type_to_file_rank.py  square_type_to_serial_number.py  square_type_to_unified_address.py  to_address_pos.py  (+15 more)
(+33 files in other folders)
